# agenttray

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  plan.md  vite.config.ts
.claude/commands/: release.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: assign.yml  release.yml
docs/: compatibility.md  use-cases.md
docs/internal/: build-spec-v2.md
docs/maintainers/: releasing.md
scripts/: README.md  build.ps1  build.sh  registry.sh  release.sh  wrap.ps1  wrap.sh
scripts/detectors/: 60_x11_generic.sh  99_unknown.sh
scripts/hooks/: agent-tray-hook.ps1  agent-tray-hook.sh  install-hooks.ps1  install-hooks.sh
src/: app.css
src-tauri/: Cargo.toml  agenttray.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: focus.rs  heuristics.rs  main.rs  notifier.rs  scanner.rs  tray.rs  watcher.rs
src-tauri/src/focusers/: jetbrains.rs  kitty.rs  macos_app.rs  mod.rs  neovim.rs  os_helpers.rs  screen.rs  tmux.rs  unknown.rs  vscode.rs  wezterm.rs  windows_native.rs  x11_generic.rs  zellij.rs
src-tauri/src/scanner/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/scanner/strategies/: claude_code.rs  codex.rs  gemini.rs  mod.rs
src/lib/: types.ts  utils.ts
src/lib/components/: AgentBadge.svelte  AgentRow.svelte  AggregatePill.svelte  CliIcon.svelte  StatusDot.svelte
src/routes/: +page.svelte
