[package]
name    = "agent-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri                     = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell        = "2"
tauri-plugin-process      = "2"
tauri-plugin-global-shortcut = "2"
notify                    = { version = "6", default-features = false }
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
dirs-next                 = "2"
log                       = "0.4"
env_logger                = "0.11"

[dev-dependencies]
tempfile                  = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level     = "z"
lto           = "thin"
strip         = true
codegen-units = 1
panic         = "abort"
