[package]
name        = "agent-tray"
version     = "0.1.0"
edition     = "2021"
description = "System tray monitor for AI coding agents"

[dependencies]
tauri                     = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell        = "2"
tauri-plugin-process      = "2"
tauri-plugin-global-shortcut = "2"
notify                    = "6"
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
dirs-next                 = "2"
log                       = "0.4"
env_logger                = "0.11"

[dev-dependencies]
tempfile                  = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level     = "z"
lto           = "thin"
strip         = true
codegen-units = 1
panic         = "unwind"

[profile.ci-release]
inherits      = "release"
lto           = "thin"
codegen-units = 16
opt-level     = "s"
